--- a/src/GuideData/guidedata.css
+++ b/src/GuideData/guidedata.css
@@ -28,13 +28,14 @@
   
   
   .travel-card-title {
-    font-size: 24px;
+    font-size: 14px;
     font-style: oblique;
     color: #333;
     width: 190px;
     margin-bottom: 20px;
     padding-top: 0px;
    margin-left: 350px;
+   text-align: center;
   }
   
   .travel-card-description {
@@ -44,6 +45,10 @@
      width: 950px;
      margin-bottom: 40px;
      
+  }
+  .title{
+    text-align: center;
+    
   }
   
   .travel-card-button {
@@ -89,3 +94,91 @@
     transition: transform 0.2s ease;
   }
   
+  .navbar-nav .nav-link {
+    color: #333; /* Change the text color to dark */
+  }
+  
+  .navbar-nav .nav-link:hover {
+    color: #555; /* Change the text color on hover */
+  }
+  
+  .navbar-nav .nav-item.active .nav-link {
+    color: #555; /* Change the text color of the active link */
+  }
+  
+  .navbar-nav {
+    background-color: transparent; /* Change the background color of the navbar */
+  }
+  
+
+  /* NavBar.css */
+
+.navbar {
+  background-color: #42B72A;
+  color: #fff;
+  padding: 10px 0;
+}
+.navbar-logo {
+  max-height: 85px;
+  margin-left: -100px;
+   border-radius:30px ; /* Adjust the max-height value as needed */
+}
+
+
+.roamease1 a {
+  padding: 0.5rem;
+  margin-top:8px;
+  font-size: 40px;
+}
+.container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 20px;
+}
+
+.logo a {
+  color: #fff;
+  font-size: 24px;
+  text-decoration: none;
+}
+
+.nav-links {
+  list-style: none;
+  display: flex;
+}
+
+.nav-links li {
+  margin-right: 10px;
+}
+
+.nav-link {
+  color: #fff;
+  text-decoration: none;
+  font-size: 20px;
+  transition: all 0.3s ease;
+}
+
+.nav-link:hover {
+  color: #ffc107; /* Change color on hover */
+}
+.location-button {
+  background-color: #007bff; /* Blue color, change it to your desired color */
+  color: #fff; /* White text color */
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 16px;
+  display: flex;
+  align-items: center;
+  margin-left: 80px;
+  margin-bottom: 30px;
+  position: absolute;
+}
+
+.location-button:hover {
+  background-color: #0056b3; /* Darker blue color on hover */
+}
