--- a/src/Cartdata/cartdata.css
+++ b/src/Cartdata/cartdata.css
@@ -48,7 +48,9 @@ padding-top:10px;
     color: #555; /* Change the text color on hover */
   }
   
- 
+  .navbar-nav .nav-item.active .nav-link {
+    color: #555; /* Change the text color of the active link */
+  }
   
   .navbar-nav {
     background-color: rgba(255, 255, 255, 0.6); /* Change the background color of the navbar */
@@ -67,7 +69,8 @@ padding-top:10px;
 .navbar-nav .nav-link {
   padding-right: 10px; /* Adjust the right padding as needed */
 }
-.active .nav-link {
-  text-decoration: underline;
+.cart{
+    margin-left: 350px;
+    margin-top: 50px;
+    height: auto;
 }
-
